# MealyMachine

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md
include/MealyMachine/: Fwd.h  MapTransitionChooser.h  MealyMachine.h  TransitionChooser.h
src/: MealyMachine.cpp
src/MealyMachine/: Exception.h  Fwd.h  MapTransitionChooser.h  MealyMachine.cpp  MealyMachine.h  TransitionChooser.h
tests/: CMakeLists.txt  tests.cpp
